@@ -81,6 +81,17 @@ info threads [-gid] [-stopped] [ID]...
      'hit-lanes-mask' to its output.  The mask encodes for which lanes
      the breakpoint condition was evaluated to true.
 
+* New remote packets
+
+e
+
+  Fetch the "expedited" registers from the remote target.  These are
+  the registers that are deemed the most important by the target and
+  are typically the same as those sent in a 'T' stop reply packet.
+  The 'e' packet is can be an alternative to the 'g' packet to reduce
+  the transfer overhead between GDB and the remote target when the
+  complete register file of a thread is large.
+
 *** Changes in GDB 13
 
 * MI version 1 is deprecated, and will be removed in GDB 14.
